--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.2",
+    "dotenv": "^16.4.7",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^11.1.0",
     "husky": "^9.1.7",
