--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "strict": false,
+    "noImplicitAny": false,
+  },
+  "exclude": ["node_modules", "dist"]
 }
